<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Emulation">
        <menu>
            <group android:id="@+id/group_emulation" android:checkableBehavior="single">
                <item
                    android:id="@+id/main_menu_shortcuts"
                    android:icon="@drawable/icon_shortcut"
                    android:title="@string/shortcuts" />
                <item
                    android:id="@+id/main_menu_containers"
                    android:icon="@drawable/icon_container"
                    android:title="@string/containers" />
            </group>
        </menu>
    </item>

    <item android:title="Tools &amp; Drivers">
        <menu>
            <group android:id="@+id/group_tools" android:checkableBehavior="single">
                <item
                    android:id="@+id/main_menu_input_controls"
                    android:icon="@drawable/icon_input_controls"
                    android:title="@string/input_controls" />
                <item
                    android:id="@+id/main_menu_contents"
                    android:icon="@drawable/ic_package_install"
                    android:title="@string/contents" />
                <item
                    android:id="@+id/main_menu_community_configs"
                    android:icon="@drawable/ic_community_configs"
                    android:title="Community Configs" />
                <item
                    android:id="@+id/main_menu_file_manager"
                    android:icon="@drawable/icon_menu_file_manager"
                    android:title="@string/file_manager" />
                <item
                    android:id="@+id/main_menu_manage_graphics_drivers"
                    android:icon="@drawable/ic_graphics_management"
                    android:title="@string/manage_graphics_drivers" />
                <item
                    android:id="@+id/main_menu_adrenotools_gpu_drivers"
                    android:icon="@drawable/ic_graphics_enhancements"
                    android:title="@string/adrenotools_gpu_drivers" />
            </group>
        </menu>
    </item>

    <item android:title="System">
        <menu>
            <group android:id="@+id/group_system" android:checkableBehavior="single">
                <item
                    android:id="@+id/main_menu_settings"
                    android:icon="@drawable/icon_settings"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/main_menu_about"
                    android:icon="@drawable/icon_about"
                    android:title="@string/about" />
            </group>
        </menu>
    </item>

</menu>