<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/shortcut_settings" android:title="@string/settings" android:icon="@drawable/icon_popup_menu_settings" android:iconTint="?attr/colorAccent" />
    <item android:id="@+id/shortcut_manage_cover_art" android:title="@string/manage_cover_art" android:icon="@drawable/icon_image_picker" android:iconTint="?attr/colorAccent" />
    <item android:id="@+id/shortcut_add_to_home_screen" android:title="@string/add_to_home_screen" android:icon="@drawable/icon_shortcut" android:iconTint="?attr/colorAccent" />
    <item android:id="@+id/shortcut_remove" android:title="@string/remove" android:icon="@drawable/icon_popup_menu_remove" android:iconTint="?attr/colorAccent" />
    <item android:id="@+id/shortcut_export" android:title="Export" android:icon="@drawable/icon_export" android:iconTint="?attr/colorAccent" />
    <item android:id="@+id/shortcut_share_community" android:title="Share with Community" android:icon="@drawable/ic_share_community" android:iconTint="?attr/colorAccent" />
    <item android:id="@+id/shortcut_clone_to_container" android:title="Clone" android:icon="@drawable/icon_popup_menu_transfer" android:iconTint="?attr/colorAccent" />
    <item android:id="@+id/shortcut_save_manager" android:title="Save Manager" android:icon="@drawable/icon_save_manager" android:iconTint="?attr/colorAccent" />
    <item android:id="@+id/shortcut_properties" android:title="Properties" android:icon="@drawable/icon_info" android:iconTint="?attr/colorAccent" />
</menu>